--- a/k8s/mongo-service.yml
+++ b/k8s/mongo-service.yml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    name: mongo
-  name: mongo
+    name: bookshopdb
+  name: bookshopdb
 spec:
   ports:
     - port: 27017
       targetPort: 27017
   selector:
-    name: mongo
+    name: bookshopdb
