--- a/ui/package.json
+++ b/ui/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "vue-cli-service serve --mode kube",
+    "build-kube": "vue-cli-service build --mode kube",
+    "build-docker": "vue-cli-service build --mode docker",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
